refactor(system): 重构系统模块代码结构和依赖配置，迁移新功能到springboot3中